# qgis-atlasprint

./: .gitattributes  .gitignore  .gitlab-ci.yml  .qgis-plugin-ci  .travis.yml  CHANGELOG.md  Makefile  README.md  __init__.py  atlasprint.py  atlasprintServer.py  atlasprint_dialog.py  atlasprint_dialog_base.ui  metadata.txt  pb_tool.cfg  pyproject.toml  readme.md  requirements.txt  resources.py  resources.qrc  setup.cfg
.docker/: run-tests.sh
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
.lizcloud/: check_tag.sh  fabric.mk  factory.mk  metadata_key
.lizcloud/tests/: Makefile  conftest.py
.lizcloud/tests/tests/: test_getcapabilitiesatlas.py
atlasprint/: README.md  __init__.py  atlasprintService.py  core.py  filter.py  logger.py  metadata.txt  plausible.py  readme.md  server.py  service.py  tools.py
atlasprintServer/: atlasprintFilter.py  atlasprintServer.py  atlasprintService.py  core.py
atlasprintServer/filters/: atlasprintFilter.py  core.py
filters/: atlasprintFilter.py  core.py
help/source/: conf.py  index.rst
requirements/: dev.txt  lint.txt  packaging.txt  tests.txt
test/: test_atlas.py  test_atlasprint_dialog.py  test_resources.py
test/data/: atlas_simple.qgs  tram_montpellier.geojson
tests/: Makefile  conftest.py  pytest.ini  run-tests.sh  test_atlas.py  test_getcapabilitiesatlas.py  test_getprintatlas.py  test_not_atlas_request.py  test_tools.py
tests/core/: client.py  qgis.py
tests/data/: atlas_simple.qgs  lines.geojson  no_atlas.qgs
